plugins {
    id 'java'
    id "me.champeau.jmh" version "0.6.6"
}

group 'com.techzealot'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    implementation group: 'cn.hutool', name: 'hutool-all', version: '5.8.0.M3'

}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    modularity.inferModulePath = true
}

def moduleName='techzealot.java.playground'

jmh {
    warmupIterations = 2
    iterations = 5
    fork = 1
    jvmArgsPrepend=['--enable-preview']
    includes =[]
}


//enable preview features
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
    //支持外部函数调用
    jvmArgs += "--enable-native-access=$moduleName"
}